--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="purchaseHistory">Purchase History</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="log_out">LOG OUT</string>
+    <string name="order_history">ORDER HISTORY</string>
+    <string name="DevName">Priyanshu Gupta</string>
+    <string name="edit">Edit</string>
 </resources>
