--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,6 @@
     <string name="DevName">Priyanshu Gupta</string>
     <string name="edit">Edit</string>
     <string name="warranty_check">Warranty Check</string>
-    <string name="buy_now">Buy Now</string>
     <string name="profile">Profile</string>
     <string name="welcome">WELCOME</string>
     <string name="design">design</string>
@@ -34,4 +33,13 @@
     <string name="password">Password</string>
     <string name="sign_in">SIGN IN</string>
     <string name="sample_mail">Priyanshu@gmail.com</string>
+    <string name="listed_items">Listed Items</string>
+    <string name="un_signed_items">Un-Signed Items</string>
+    <string name="signed_items">Signed Items</string>
+    <string name="buy_now">Buy Now</string>
+    <string name="delete">Delete</string>
+    <string name="from">From :</string>
+    <string name="till">Till :</string>
+    <string name="remark">Remark :</string>
+    <string name="hello_world">hello world</string>
 </resources>
